--- a/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.less
@@ -1,5 +1,5 @@
-.sidebar {
-	&__header {
+.flight-group-item {
+	&__flight-group {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 		column-gap: 5px;
