--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -1,6 +1,7 @@
 body {
 	background: #202020;
 	color: white;
+	font-family: Calibri, Helvetica, sans-serif;
 
 	--action: #eb64b9;
 	--body: #ffffff;
