feat(campaign): mission modal wip

--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -1,8 +1,16 @@
 body {
-	background: #202020;
+	background: #27212e;
 	color: white;
 	font-family: Calibri, Helvetica, sans-serif;
 
 	--action: #eb64b9;
 	--body: #ffffff;
+	--background: #27212e;
+}
+
+html,
+body {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
 }
