feat(campaign): logic

--- a/packages/apps/campaign/src/apps/home/Home.less
+++ b/packages/apps/campaign/src/apps/home/Home.less
@@ -1,5 +1,9 @@
 .home {
 	display: grid;
-	grid-template-columns: 340px 1fr;
+	grid-template-rows: 100px 1fr;
+	grid-template-columns: 500px 1fr;
+	grid-template-areas:
+		"header header"
+		"sidebar content";
 	column-gap: 10px;
 }
