--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -3,9 +3,17 @@ body {
 	color: white;
 	font-family: Calibri, Helvetica, sans-serif;
 
-	--action: #eb64b9;
+	--action: #704b91;
+	--secondary: #bd8152;
 	--body: #ffffff;
 	--background: #27212e;
+	--background-hover: #2d2735;
+
+	--shadow: 0px 2px 7px 0px #111111;
+
+	--cas: #914b80;
+	--cap: #4b5b91;
+	--awacs: #7588c9;
 }
 
 html,
