--- a/packages/apps/campaign/src/apps/home/Home.module.less
+++ b/packages/apps/campaign/src/apps/home/Home.module.less
@@ -6,5 +6,10 @@
 		"header header"
 		"sidebar content";
 	column-gap: 10px;
-	height: 100%;
+	height: 100vh;
+}
+
+.content {
+	grid-area: content;
+	position: relative;
 }
