feat(campaign): update

--- a/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.module.less
@@ -35,3 +35,14 @@
 .task--awacs {
 	background-color: var(--awacs);
 }
+
+.client-batch {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	padding: 5px;
+	background-color: var(--secondary);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
