--- a/packages/libs/components/src/card/Card.module.less
+++ b/packages/libs/components/src/card/Card.module.less
@@ -3,6 +3,7 @@
 	border-radius: 5px;
 	padding: 10px;
 	margin: 10px;
+	overflow: hidden;
 
 	&:hover {
 		background-color: var(--background-hover);
