feat(campaign): frontline battle & game over

--- a/packages/libs/components/src/card/Card.module.less
+++ b/packages/libs/components/src/card/Card.module.less
@@ -2,8 +2,9 @@
 	box-shadow: var(--shadow);
 	border-radius: 5px;
 	padding: 10px;
-	margin: 10px;
 	overflow: hidden;
+	background-color: var(--background);
+	width: 100%;
 
 	&:hover {
 		background-color: var(--background-hover);
