feat(campaign): update

--- a/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
@@ -1,4 +1,12 @@
 .sidebar {
 	grid-area: sidebar;
 	margin-inline: 10px;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow: hidden;
+
+	&__list {
+		padding-bottom: 10px;
+	}
 }
