--- a/packages/libs/components/src/button/Button.module.less
+++ b/packages/libs/components/src/button/Button.module.less
@@ -11,11 +11,16 @@
 
 	&:hover {
 		box-shadow: var(--shadow);
+		background-color: var(--action-hover);
 	}
 
 	&:active,
 	&:focus-visible {
 		outline: unset;
+	}
+
+	&:active {
+		background-color: var(--action-active);
 	}
 }
 
