--- a/packages/libs/components/src/modal/Close.module.less
+++ b/packages/libs/components/src/modal/Close.module.less
@@ -1,11 +1,14 @@
 .modal-close {
 	position: absolute;
-	top: 0;
-	right: 0;
+	top: 5px;
+	right: 5px;
 	color: var(--body);
 	background-color: unset;
 	border: none;
-	border-radius: 10px;
+	border-radius: 50%;
+	padding: 5px;
+	height: 30px;
+	width: 30px;
 
 	svg {
 		width: 20px;
