feat(campaign): barracks

--- a/packages/apps/campaign/src/components/map/popup/Structure.module.less
+++ b/packages/apps/campaign/src/components/map/popup/Structure.module.less
@@ -56,3 +56,7 @@
 .image-tech-hangar-a {
 	background-image: url("./images/tech-hangar-a.jpg");
 }
+
+.image-electric-power-box {
+	background-image: url("./images/tech-hangar-a.jpg");
+}
