feat(campaign): structures WIP

--- a/packages/apps/campaign/src/components/map/popup/Structure.module.less
+++ b/packages/apps/campaign/src/components/map/popup/Structure.module.less
@@ -58,5 +58,9 @@
 }
 
 .image-electric-power-box {
-	background-image: url("./images/tech-hangar-a.jpg");
+	background-image: url("./images/electric-power-box.jpg");
+}
+
+.image-repair-workshop {
+	background-image: url("./images/repair-workshop.jpg");
 }
