feat(campaign): loadout

--- a/packages/apps/campaign/src/apps/create-campaign/screens/Faction.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Faction.module.less
@@ -45,6 +45,11 @@
 	background-position: center;
 }
 
+.spain {
+	background-image: url("./flags/spain.png");
+	background-position: right center;
+}
+
 .russia {
 	background-image: url("./flags/russia.png");
 	background-position: center;
