feat(campaign): update

--- a/packages/apps/campaign/src/apps/home/components/overlay-sidebar/OverlaySidebar.module.less
+++ b/packages/apps/campaign/src/apps/home/components/overlay-sidebar/OverlaySidebar.module.less
@@ -6,6 +6,10 @@
 	left: -500px;
 	background-color: var(--action);
 	transition: left 200ms ease-in-out;
+	box-shadow: var(--shadow);
+	z-index: 1000;
+	display: flex;
+	flex-direction: column;
 
 	&--open {
 		left: 0;
