--- a/packages/apps/campaign/src/apps/home/components/overlay-sidebar/Structure.module.less
+++ b/packages/apps/campaign/src/apps/home/components/overlay-sidebar/Structure.module.less
@@ -64,3 +64,23 @@
 .image-repair-workshop {
 	background-image: url("./images/repair-workshop.jpg");
 }
+
+.image-farp-ammo-storage {
+	background-image: url("./images/farp-ammo-storage.jpg");
+}
+
+.image-farp-command-post {
+	background-image: url("./images/farp-command-post.jpg");
+}
+
+.image-farp-fuel-depot {
+	background-image: url("./images/farp-fuel-depot.jpg");
+}
+
+.image-farp-tent {
+	background-image: url("./images/farp-tent.jpg");
+}
+
+.image-invisible-farp {
+	background-image: url("./images/invisible-farp.jpg");
+}
