--- a/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
@@ -1,6 +1,5 @@
 .sidebar {
 	grid-area: sidebar;
-	margin-inline: 10px;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
@@ -8,5 +7,6 @@
 
 	&__list {
 		padding-bottom: 10px;
+		padding-inline: 10px;
 	}
 }
