--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -6,6 +6,7 @@ body {
 	--action: #704b91;
 	--action-hover: #835da4;
 	--action-active: #aa81cc;
+	--action-dark: #613d82;
 	--secondary: #bd8152;
 	--body: #ffffff;
 	--background: #27212e;
@@ -16,6 +17,8 @@ body {
 	--cas: #914b80;
 	--cap: #4b5b91;
 	--awacs: #7588c9;
+	--strike: #a53489;
+	--escort: #6c4b91;
 }
 
 html,
