feat(campaign): update

--- a/packages/apps/campaign/src/apps/create-campaign/screens/ScenarioDescription.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/ScenarioDescription.module.less
@@ -20,4 +20,12 @@ p {
 
 .button {
 	margin-top: 20px;
+
+	&--back {
+		background-color: var(--secondary);
+
+		&:hover {
+			background-color: var(--secondary-hover);
+		}
+	}
 }
