--- a/packages/apps/campaign/src/apps/home/components/header/Header.module.less
+++ b/packages/apps/campaign/src/apps/home/components/header/Header.module.less
@@ -4,6 +4,7 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 20px;
+	position: relative;
 }
 
 .title {
@@ -14,4 +15,10 @@
 .buttons {
 	display: flex;
 	gap: 10px;
+}
+
+.take-off-help-text {
+	position: absolute;
+	right: 0;
+	bottom: 0;
 }
