--- a/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.module.less
@@ -74,6 +74,17 @@
 	top: 10px;
 	right: 10px;
 	padding-block: 8px;
+
+	svg {
+		position: relative;
+		top: 2px;
+	}
+
+	span {
+		position: relative;
+		bottom: 1px;
+		margin-left: 5px;
+	}
 }
 
 .clientRemoveButton {
@@ -81,4 +92,13 @@
 	top: 10px;
 	right: 60px;
 	padding-block: 8px;
+
+	svg {
+		position: relative;
+		top: 2px;
+	}
+}
+
+.is-client {
+	color: var(--secondary);
 }
