--- a/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
@@ -9,4 +9,12 @@
 		padding-bottom: 10px;
 		padding-inline: 10px;
 	}
+
+	&__title {
+		font-size: 30px;
+		font-weight: 100;
+		text-transform: uppercase;
+		margin-left: 20px;
+		margin-block: 10px;
+	}
 }
