--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -8,9 +8,13 @@ body {
 	--action-active: #aa81cc;
 	--action-dark: #613d82;
 	--secondary: #bd8152;
+	--secondary-hover: #bd9170;
 	--body: #ffffff;
 	--background: #27212e;
 	--background-hover: #2d2735;
+	--background-opacity: #27212ecc;
+	--black: #222222;
+	--error: #a32f2f;
 
 	--shadow: 0px 2px 7px 0px #111111;
 
@@ -47,6 +51,9 @@ body,
 h1,
 h2,
 h3,
+button,
+div,
 p {
 	margin: 0;
+	font-family: Calibri, Helvetica, sans-serif;
 }
