--- a/packages/libs/components/src/button/Button.module.less
+++ b/packages/libs/components/src/button/Button.module.less
@@ -22,6 +22,12 @@
 	&:active {
 		background-color: var(--action-active);
 	}
+
+	&--disabled {
+		opacity: 0.4;
+		cursor: not-allowed;
+		pointer-events: none;
+	}
 }
 
 .button--large {
