--- a/packages/libs/components/src/scroll-container/ScrollContainer.module.less
+++ b/packages/libs/components/src/scroll-container/ScrollContainer.module.less
@@ -3,6 +3,7 @@
 	overflow-y: overlay;
 	scrollbar-width: "thin";
 	scrollbar-color: "rgba(217,217,217,1) rgba(0,0,0,0)";
+	pointer-events: all;
 	&::-webkit-scrollbar {
 		width: 6px;
 		height: 6px;
