--- a/packages/apps/campaign/src/apps/home/components/mission-overlay/MissionOverlay.module.less
+++ b/packages/apps/campaign/src/apps/home/components/mission-overlay/MissionOverlay.module.less
@@ -33,18 +33,38 @@
 	right: 0;
 	font-size: 60px;
 	font-weight: 300;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	&--forwarding {
+		left: 0;
+		bottom: 0;
+	}
 }
 
 .title {
 	font-size: 60px;
 	font-weight: 800;
 	text-transform: uppercase;
+	opacity: 0;
+
+	&--show {
+		opacity: 1;
+	}
 }
 
 .buttons {
 	display: flex;
 	justify-content: flex-end;
 	gap: 20px;
+	opacity: 0;
+	pointer-events: none;
+
+	&--show {
+		opacity: 1;
+		pointer-events: initial;
+	}
 }
 
 .button {
@@ -52,5 +72,13 @@
 
 	&:hover {
 		background-color: var(--secondary);
+	}
+}
+
+.help-text {
+	opacity: 0;
+
+	&--show {
+		opacity: 1;
 	}
 }
