--- a/packages/apps/launcher/src/index.less
+++ b/packages/apps/launcher/src/index.less
@@ -1,4 +1,60 @@
 body {
-	background: #202020;
+	background: #27212e;
 	color: white;
+	font-family: Calibri, Helvetica, sans-serif;
+
+	--action: #704b91;
+	--action-hover: #835da4;
+	--action-active: #aa81cc;
+	--action-dark: #613d82;
+	--secondary: #bd8152;
+	--secondary-hover: #bd9170;
+	--body: #ffffff;
+	--background: #27212e;
+	--background-hover: #2d2735;
+	--background-opacity: #27212ecc;
+	--black: #222222;
+	--error: #a32f2f;
+
+	--shadow: 0px 2px 7px 0px #111111;
+
+	--cas: #914b80;
+	--cap: #4b5b91;
+	--awacs: #7588c9;
+	--strike: #a53489;
+	--escort: #6c4b91;
+}
+
+html,
+body,
+#root {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	margin: 0;
+
+	&::-webkit-scrollbar {
+		width: 6px;
+		height: 6px;
+	}
+
+	&::-webkit-scrollbar-track {
+		margin-top: 2px;
+		background: transparent;
+	}
+
+	&::-webkit-scrollbar-corner {
+		display: none;
+	}
+}
+
+h1,
+h2,
+h3,
+button,
+div,
+p {
+	margin: 0;
+	font-family: Calibri, Helvetica, sans-serif;
+	user-select: none;
 }
