feat(campaign): update

--- a/packages/apps/campaign/src/apps/create-campaign/screens/Faction.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Faction.module.less
@@ -36,6 +36,19 @@
 	opacity: 0.1;
 }
 
+.back-button {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+
+	svg {
+		height: 32px;
+		width: 32px;
+		position: relative;
+		top: 2px;
+	}
+}
+
 .usa {
 	background-image: url("./flags/usa.png");
 }
