--- a/packages/apps/campaign/src/apps/home/components/overlay-sidebar/Item.module.less
+++ b/packages/apps/campaign/src/apps/home/components/overlay-sidebar/Item.module.less
@@ -1,6 +1,10 @@
 .header {
 	background-color: var(--action-hover);
 	padding: 10px;
+
+	&--with-client {
+		background-color: var(--secondary-hover);
+	}
 }
 
 .title {
@@ -196,4 +200,12 @@
 			background-color: var(--secondary-hover);
 		}
 	}
+}
+
+.player {
+	position: absolute;
+	top: 30px;
+	right: 10px;
+	text-transform: uppercase;
+	font-size: 20px;
 }
