feat(campaign): update

--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -11,6 +11,7 @@ body {
 	--secondary-hover: #bd9170;
 	--body: #ffffff;
 	--background: #27212e;
+	--background-light: #4d4655;
 	--background-hover: #2d2735;
 	--background-opacity: #27212ecc;
 	--black: #222222;
