--- a/packages/apps/home/src/index.less
+++ b/packages/apps/home/src/index.less
@@ -11,9 +11,11 @@ body {
 	--secondary-hover: #bd9170;
 	--body: #ffffff;
 	--background: #27212e;
+	--background-light: #4d4655;
 	--background-hover: #2d2735;
 	--background-opacity: #27212ecc;
 	--black: #222222;
+	--positive: #2fa352;
 	--error: #a32f2f;
 
 	--shadow: 0px 2px 7px 0px #111111;
@@ -53,6 +55,7 @@ h2,
 h3,
 button,
 div,
+input,
 p {
 	margin: 0;
 	font-family: Calibri, Helvetica, sans-serif;
