--- a/packages/libs/components/src/switch/Switch.module.less
+++ b/packages/libs/components/src/switch/Switch.module.less
@@ -8,12 +8,12 @@
 	height: 20px;
 	border-radius: 10px;
 	width: 40px;
-	background-color: var(--background-hover);
+	background-color: var(--background-light);
 	position: relative;
 	cursor: pointer;
 
 	&[data-checked] {
-		background-color: var(--action-dark);
+		background-color: var(--action);
 		div[data-part="thumb"] {
 			left: 21px;
 		}
