feat(campaign): debrief & bug fixes

--- a/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/Sidebar.module.less
@@ -18,3 +18,21 @@
 		margin-block: 10px;
 	}
 }
+
+.night-wrapper {
+	margin: 10px;
+	background-color: var(--secondary);
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
+}
+
+.night-description {
+	font-size: 20px;
+	text-align: center;
+}
+
+.night-buttons {
+	display: flex;
+	justify-content: center;
+}
