--- a/packages/apps/home/src/pages/settings/PathSelector.module.less
+++ b/packages/apps/home/src/pages/settings/PathSelector.module.less
@@ -4,6 +4,10 @@
 
 .label {
 	font-size: 20px;
+
+	&--disabled {
+		opacity: 0.7;
+	}
 }
 
 .path {
@@ -35,4 +39,8 @@
 		height: 25px;
 		width: 25px;
 	}
+}
+
+.icon--disabled {
+	opacity: 0.7;
 }
