feat: add supportZip

--- a/packages/apps/home/src/pages/about/about.module.less
+++ b/packages/apps/home/src/pages/about/about.module.less
@@ -19,18 +19,24 @@
 .header {
 	font-size: 16px;
 	font-weight: 800;
+	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
-.description {
+.text {
 	p {
-		margin-block: 5px;
+		margin-block: 10px;
 	}
 }
+
+.button {
+	min-width: 100px;
+}
+
 .buttons {
-	margin-top: 40px;
+	margin-top: 20px;
 	width: 100%;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 	gap: 10px;
 }
