feat(campaign): bug fixes

--- a/packages/apps/campaign/src/apps/home/components/mission-overlay/Debrief.module.less
+++ b/packages/apps/campaign/src/apps/home/components/mission-overlay/Debrief.module.less
@@ -28,9 +28,13 @@
 	text-align: center;
 }
 
+.stats {
+	margin-top: 20px;
+}
+
 .stats-row {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .stat {
