--- a/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.module.less
+++ b/packages/apps/campaign/src/apps/home/components/sidebar/FlightGroupItem.module.less
@@ -102,3 +102,18 @@
 .is-client {
 	color: var(--secondary);
 }
+
+.in-air-wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	justify-content: center;
+}
+
+.in-air {
+	background-color: var(--secondary);
+	text-transform: uppercase;
+	padding: 10px;
+}
