--- a/packages/libs/components/src/radio-group/RadioItem.module.less
+++ b/packages/libs/components/src/radio-group/RadioItem.module.less
@@ -15,7 +15,7 @@
 	height: 16px;
 	border-radius: 8px;
 	width: 16px;
-	background-color: var(--background-hover);
+	background-color: var(--background-light);
 	cursor: pointer;
 	transition: background-color 100ms ease-in-out;
 }
