--- a/packages/apps/campaign/src/apps/create-campaign/screens/Factions.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Factions.module.less
@@ -25,6 +25,12 @@
 
 .faction {
 	position: relative;
+
+	&:hover {
+		.customize-button {
+			opacity: 1;
+		}
+	}
 }
 
 .flag {
@@ -67,4 +73,31 @@
 	background-image: url("./flags/russia.png");
 	background-position: center;
 	background-size: contain;
+}
+
+.aircraft-list {
+	display: flex;
+	gap: 10px;
+	margin-top: 10px;
+	justify-content: center;
+	opacity: 0.8;
+}
+
+.customize-button {
+	opacity: 0;
+	&-wrapper {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		right: 10px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
+.buttons {
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 40px;
 }
