--- a/packages/libs/components/src/list/ListItem.module.less
+++ b/packages/libs/components/src/list/ListItem.module.less
@@ -1,6 +1,7 @@
 .list-item--pressable {
 	cursor: pointer;
-
+	user-select: all;
+	pointer-events: all;
 	&:hover {
 		background-color: var(--action);
 	}
