feat(campaign): z schema

--- a/packages/apps/campaign/src/apps/create-campaign/CreateCampaign.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/CreateCampaign.module.less
@@ -3,10 +3,11 @@
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	overflow: hidden;
 
 	&__content {
 		display: flex;
 		flex-direction: column;
-		width: 500px;
+		max-height: 100%;
 	}
 }
