--- a/packages/apps/campaign/src/apps/create-campaign/screens/Scenarios.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Scenarios.module.less
@@ -1,3 +1,17 @@
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow: hidden;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	padding: 10px;
+}
+
 .item {
 	border-radius: 5px;
 }
@@ -6,7 +20,7 @@
 	font-weight: 300;
 	font-size: 45px;
 	text-align: center;
-	margin-bottom: 20px;
+	margin-block: 20px;
 }
 
 .name {
@@ -26,6 +40,7 @@
 .scenario {
 	position: relative;
 	height: 200px;
+	width: 500px;
 }
 
 .background {
