--- a/packages/apps/campaign/src/apps/create-campaign/screens/Factions.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Factions.module.less
@@ -1,12 +1,22 @@
-.item {
-	border-radius: 5px;
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow: hidden;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	padding: 10px;
 }
 
 .title {
 	font-weight: 300;
 	font-size: 45px;
 	text-align: center;
-	margin-bottom: 20px;
+	margin-block: 20px;
 }
 
 .name {
@@ -25,6 +35,7 @@
 
 .faction {
 	position: relative;
+	width: 600px;
 
 	&:hover {
 		.customize-button {
@@ -61,6 +72,7 @@
 	margin-top: 10px;
 	justify-content: center;
 	opacity: 0.8;
+	flex-wrap: wrap;
 }
 
 .customize-button {
@@ -79,5 +91,5 @@
 .buttons {
 	display: flex;
 	justify-content: flex-end;
-	margin-top: 40px;
+	margin-block: 20px;
 }
