--- a/packages/apps/campaign/src/apps/create-campaign/screens/ScenarioDescription.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/ScenarioDescription.module.less
@@ -1,3 +1,12 @@
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow: hidden;
+	width: 500px;
+	margin-block: 10px;
+}
+
 .title {
 	font-weight: 300;
 	font-size: 50px;
