--- a/packages/libs/components/src/scroll-container/ScrollContainer.module.less
+++ b/packages/libs/components/src/scroll-container/ScrollContainer.module.less
@@ -1,6 +1,6 @@
 .scroll-container {
 	height: 100%;
-	overflow-y: overlay;
+	overflow-y: auto;
 	scrollbar-width: "thin";
 	scrollbar-color: "rgba(217,217,217,1) rgba(0,0,0,0)";
 	pointer-events: all;
