feat(campaign): multi campaign support

--- a/packages/apps/campaign/src/apps/create-campaign/screens/CustomFaction.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/CustomFaction.module.less
@@ -13,6 +13,11 @@
 	margin-block: 20px;
 }
 
+.inputs {
+	display: flex;
+	justify-content: space-evenly;
+}
+
 .scroll-container {
 	padding-inline: 10px;
 }
@@ -29,6 +34,11 @@
 
 .mission-task {
 	margin-top: 20px;
+	margin-bottom: 10px;
+	text-align: center;
+	background-color: var(--background-hover);
+	padding-block: 10px;
+	font-weight: 300;
 }
 
 .buttons {
