feat(campaign): custom faction styling

--- a/packages/apps/campaign/src/apps/create-campaign/screens/CustomFaction.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/CustomFaction.module.less
@@ -41,6 +41,13 @@
 	font-weight: 300;
 }
 
+.input-label {
+	margin-top: 20px;
+	text-align: center;
+	padding-block: 10px;
+	font-weight: 300;
+}
+
 .buttons {
 	display: flex;
 	justify-content: flex-end;
