feat(campaign): factions

--- a/packages/apps/campaign/src/apps/open-campaign/Open.module.less
+++ b/packages/apps/campaign/src/apps/open-campaign/Open.module.less
@@ -80,8 +80,14 @@
 	}
 }
 
-.edited {
+.timer {
 	margin-top: 20px;
+	font-weight: 300;
+	font-size: 20px;
+	opacity: 0.8;
+}
+
+.edited {
 	font-weight: 300;
 	font-size: 20px;
 	opacity: 0.8;
