feat(campaign): update

--- a/packages/libs/components/src/flag/Flag.module.less
+++ b/packages/libs/components/src/flag/Flag.module.less
@@ -24,7 +24,7 @@
 .iraq {
 	background-image: url("./images/iraq.png");
 	background-position: center;
-	background-size: contain;
+	background-size: cover;
 }
 
 .russia {
