feat(campaign): syria & weather

--- a/packages/libs/components/src/flag/Flag.module.less
+++ b/packages/libs/components/src/flag/Flag.module.less
@@ -9,6 +9,11 @@
 	background-position: center;
 }
 
+.sweden {
+	background-image: url("./images/sweden.png");
+	background-position: center;
+}
+
 .germany {
 	background-image: url("./images/germany.png");
 	background-position: center;
