feat(campaign): weather & bug fixes

--- a/packages/apps/campaign/src/apps/create-campaign/screens/Scenarios.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Scenarios.module.less
@@ -67,6 +67,10 @@
 	background-image: url("./images/road-to-paris.jpg");
 }
 
+.desert-thunder {
+	background-image: url("./images/desert-thunder.jpg");
+}
+
 .coming-soon {
 	position: absolute;
 	z-index: 10;
