feat(campaign): bug fixes

--- a/packages/libs/document/src/campaign/Briefing.module.less
+++ b/packages/libs/document/src/campaign/Briefing.module.less
@@ -7,19 +7,31 @@
 	background-color: rgb(219, 219, 219);
 }
 
-.flight {
+.airbase {
 	display: grid;
-	grid-template-columns: 100px 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
+	p {
+		border-bottom: 1px solid black;
+	}
 }
 
 .package {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+
+	p {
+		border-bottom: 1px solid black;
+	}
 }
 
 .radio {
 	display: grid;
 	grid-template-columns: min-content min-content 1fr min-content min-content 1fr;
+
+	p {
+		border-bottom: 1px solid black;
+	}
 }
 
 .comm1 {
