--- a/packages/chief/menu/src/menu/menu.module.less
+++ b/packages/chief/menu/src/menu/menu.module.less
@@ -66,11 +66,15 @@
 		display: block;
 		height: 8px;
 		width: 8px;
-		background: #c00000;
+		background: #bd8152;
 		border-radius: 50%;
 		position: absolute;
 		top: 2px;
 		right: 2px;
+	}
+
+	&.menuEntry::before {
+		right: 10px;
 	}
 }
 
