feat(campaign): improve persistance modal

--- a/packages/apps/campaign/src/index.less
+++ b/packages/apps/campaign/src/index.less
@@ -59,3 +59,8 @@ p {
 	font-family: Calibri, Helvetica, sans-serif;
 	user-select: none;
 }
+
+a {
+	cursor: pointer;
+	text-decoration: underline solid;
+}
