feat(campaign): bug fixing

--- a/packages/libs/document/src/campaign/Briefing.module.less
+++ b/packages/libs/document/src/campaign/Briefing.module.less
@@ -7,9 +7,13 @@
 	background-color: rgb(219, 219, 219);
 }
 
+.title {
+	margin-bottom: 10px;
+}
+
 .airbase {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 
 	p {
 		border-bottom: 1px solid black;
@@ -27,7 +31,7 @@
 
 .radio {
 	display: grid;
-	grid-template-columns: min-content min-content 1fr min-content min-content 1fr;
+	grid-template-columns: min-content min-content 1fr;
 
 	p {
 		border-bottom: 1px solid black;
