feat(campaign): bug fixing

--- a/packages/apps/campaign/src/apps/home/components/overlay-sidebar/Item.module.less
+++ b/packages/apps/campaign/src/apps/home/components/overlay-sidebar/Item.module.less
@@ -23,6 +23,14 @@
 	margin-bottom: 10px;
 }
 
+.category {
+	font-size: 30px;
+	font-weight: 800;
+	text-transform: uppercase;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+
 .item-title {
 	font-size: 30px;
 	font-weight: 800;
