feat(campaign): bug fixing

--- a/packages/libs/document/src/campaign/Briefing.module.less
+++ b/packages/libs/document/src/campaign/Briefing.module.less
@@ -60,3 +60,21 @@
 		border-bottom: 1px solid black;
 	}
 }
+
+.taskDescription {
+	padding-left: 0;
+}
+
+.name {
+	margin-bottom: 0;
+}
+
+.task {
+	font-size: 30px;
+	margin-top: 0;
+	font-weight: 300;
+}
+
+.hint {
+	background-color: rgb(219, 219, 219);
+}
