feat(campaign): bug fixes

--- a/packages/apps/campaign/src/apps/create-campaign/screens/Scenarios.module.less
+++ b/packages/apps/campaign/src/apps/create-campaign/screens/Scenarios.module.less
@@ -67,8 +67,8 @@
 	background-image: url("./images/road-to-paris.jpg");
 }
 
-.desert-thunder {
-	background-image: url("./images/desert-thunder.jpg");
+.operation-northern-shield {
+	background-image: url("./images/operation-northern-shield.jpg");
 }
 
 .coming-soon {
