fix(campaign): TACAN/ICLS #75 & Waypoint Numbers in Multiplayer #76

--- a/packages/libs/document/src/campaign/Briefing.module.less
+++ b/packages/libs/document/src/campaign/Briefing.module.less
@@ -13,7 +13,7 @@
 
 .airbase {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 60px auto auto auto auto 1fr;
 
 	p {
 		border-bottom: 1px solid black;
