fix(campaign): israel country & faction

--- a/packages/libs/components/src/flag/Flag.module.less
+++ b/packages/libs/components/src/flag/Flag.module.less
@@ -32,6 +32,12 @@
 	background-size: cover;
 }
 
+.israel {
+	background-image: url("./images/israel.png");
+	background-position: center;
+	background-size: cover;
+}
+
 .russia {
 	background-image: url("./images/russia.png");
 	background-position: center;
