--- a/packages/libs/components/src/switch/Switch.module.less
+++ b/packages/libs/components/src/switch/Switch.module.less
@@ -12,7 +12,7 @@
 	position: relative;
 	cursor: pointer;
 
-	&[data-checked] {
+	&[data-state="checked"] {
 		background-color: var(--action);
 		div[data-part="thumb"] {
 			left: 21px;
