--- a/packages/libs/components/src/radio-group/RadioItem.module.less
+++ b/packages/libs/components/src/radio-group/RadioItem.module.less
@@ -4,8 +4,8 @@
 	cursor: pointer;
 	align-items: center;
 
-	&[data-checked] {
-		div[data-part="radio-control"] {
+	&[data-state="checked"] {
+		div[data-part="item-control"] {
 			background-color: white;
 		}
 	}
