--- a/packages/libs/components/src/task-label/TaskLabel.module.less
+++ b/packages/libs/components/src/task-label/TaskLabel.module.less
@@ -27,3 +27,11 @@
 .task--escort {
 	background-color: var(--escort);
 }
+
+.task--csar {
+	background-color: var(--csar);
+}
+
+.task--air-assault {
+	background-color: var(--air-assault);
+}
