refactor(campaign): load

--- a/packages/libs/components/src/tooltip/Tooltip.module.less
+++ b/packages/libs/components/src/tooltip/Tooltip.module.less
@@ -9,6 +9,7 @@
 		padding: 10px;
 		box-shadow: var(--shadow);
 		position: relative;
+		z-index: 1000;
 
 		--arrow-background: var(--action-hover);
 		--arrow-size: 10px;
